docs: documented upload_avatar endpoint, but try out thing does not work i guess
